--- a/css/modules.css
+++ b/css/modules.css
@@ -8,31 +8,28 @@ header select{
     font-size: 18px;
 }
 
-main > section{
-    float: left;
-    border: 1px solid;
+main > template{
+    /* float: left; */
+    /* border: 1px solid; */
     width: 370px;
     height: 370px;
     margin:  10px;
     padding: 9px;
 }
-.remove-template{
-   display: none;
-}
-main > section h2{
+
+main > template h2{
     margin: 15px;
 }
-main > section img{
+main > template img{
     margin: 15px;
     width: 165px;
     height: 165px;
 }
-main > section p{
+main > template p{
      font-size: 20px;
      line-height: 1.5;
 }
 
 footer {
-    clear: both;
     padding: 5% 0;
 }
